Добавлено: -Спрайт врага и его первичная логика взаимодействия
Обновлено:
-Класс Enemy.java
-Класс BusyManager.java

TODO:
States в существующих энтити
Update и Render в энтити требуют доработки
Логику сражений с Enemy